buildscript {
	ext {
		springBootVersion = '2.1.1.RELEASE'
	}
	repositories {
		mavenCentral()
	}
	dependencies {
		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
	}
}

apply plugin: 'java-library'
apply plugin: 'eclipse-wtp'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'
apply plugin: 'maven'
apply plugin: 'signing'

group = 'com.github.joselion'
archivesBaseName = 'lion-spring-security'
version = '1.0.3'
sourceCompatibility = 11

jar {
	enabled = true
}

task javadocJar(type: Jar) {
	classifier = 'javadoc'
	from javadoc
}

task sourcesJar(type: Jar) {
	classifier = 'sources'
	from sourceSets.main.allSource
}

artifacts {
	archives jar, javadocJar, sourcesJar
}

signing {
	sign configurations.archives
}

uploadArchives {
	repositories {
		mavenDeployer {
			beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
			
			repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
				authentication(userName: ossrhUsername, password: ossrhPassword)
			}
			
			snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
				authentication(userName: ossrhUsername, password: ossrhPassword)
			}
			
			pom.project {
				name = "Lion Spring Security"
				packaging 'jar'
				description = "Library wapper to simply implement Spring Security to Spring Boot projects with additional features like locking and and expiration, by simpli adding the database account information to the application propertiies file"
				url = "https://github.com/JoseLion/LionSpringSecurity"
				
				licenses {
					license {
						name = "MIT License"
						url = "http://www.opensource.org/licenses/mit-license.php"
					}
				}
				
				developers {
					developer {
						id = "JoseLion"
						name = "Jose Luis Leon"
						email = "joseluis5000l@gmail.com"
						organization = "com.github.joselion"
						organizationUrl = "https://github.com/JoseLion"
					}
				}
				
				scm {
					connection = "scm:git:git@github.com/JoseLion/LionSpringSecurity.git"
					developerConnection = "scm:git:ssh://github.com:JoseLion/LionSpringSecurity.git"
					url = "https://github.com/JoseLion/LionSpringSecuritys"
				}
			}
		}
	}
}

repositories {
	mavenCentral()
}

dependencies {
	compile('org.springframework.boot:spring-boot-starter-web')
	compile('org.springframework.boot:spring-boot-starter-security')
	compile('org.springframework:spring-jdbc:5.1.0.RELEASE')
	compile('commons-io:commons-io:2.6')
	compileOnly('org.springframework.boot:spring-boot-configuration-processor')
	testCompile('org.springframework.boot:spring-boot-starter-test')
	testCompile('org.springframework.security:spring-security-test')
	testCompile('org.postgresql:postgresql')
}
